# public-ev

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/: index.md
docs/reference/data/: data_processing.md  example_data_import.md  viz_functions.md
docs/reference/models/: bricks.md  charger.md  controller.md  ev_system.md  sim_functions.md  sim_parameters.md  vehicles.md
ev_model/data/: data_processing.py  enums.py  example_data_import.py  schema.py  viz_functions.py
ev_model/models/: bricks.py  charger.py  controller.py  ev_system.py  sim_functions.py  sim_parameters.py  vehicles.py
notebooks/: Demo_notebook.ipynb
scripts/: gen_ref_pages.py
site/: 404.html  index.html  objects.inv
site/reference/data/data_processing/: index.html
site/reference/data/example_data_import/: index.html
site/reference/data/viz_functions/: index.html
site/reference/models/bricks/: index.html
site/reference/models/charger/: index.html
site/reference/models/controller/: index.html
site/reference/models/ev_system/: index.html
site/reference/models/sim_functions/: index.html
site/reference/models/sim_parameters/: index.html
site/reference/models/vehicles/: index.html
site/search/: search_index.json
